vendor/sqlx-0.5.2/tests/ui/sqlite/expression-column-type.rs
fn main() {
    let _ = sqlx::query!("select 1 as id");
}
